# SuperiorMySqlpp

./: .gitchangelog.rc  .gitchangelog.tpl  .gitignore  .gitmodules  .travis.yml  CHANGELOG.old  CMakeLists.txt  README.md  common.mk  libsuperiormysqlpp.pc.in  makefile
.github/workflows/: cmake.yml  release.yml
db/: Dockerfile  Dockerfile.mariadb  Dockerfile.mysql  supervisor.conf  supervisord.conf  test_database.sql
include/: superior_mysqlpp.hpp
include/superior_mysqlpp/: config.hpp  connection.hpp  connection_def.hpp  converters.hpp  dnsa_connection_pool.hpp  dynamic_prepared_statement.hpp  dynamic_prepared_statement_fwd.hpp  exceptions.hpp  field.hpp  field_types.hpp  iterator.hpp  logging.hpp  master_slave_connection_pools.hpp  prepared_statement.hpp  prepared_statement_fwd.hpp  query_result.hpp  row.hpp  row_stream.hpp  sql_types.hpp  transaction.hpp  uncaught_exception_counter.hpp  utils.hpp
include/superior_mysqlpp/converters/: to_floating_point.hpp  to_integer.hpp
include/superior_mysqlpp/extras/: function_info.hpp  member_wrapper.hpp  prepared_statement_utils.hpp  row_stream_adapter.hpp
include/superior_mysqlpp/low_level/: dbdriver.hpp  mysql_hacks.hpp
include/superior_mysqlpp/prepared_statements/: binding_types.hpp  default_initialize_result.hpp  get_binding_type.hpp  initialize_bindings.hpp  prepared_statement_base.hpp  validate_metadata_modes.hpp
include/superior_mysqlpp/shared_ptr_pool/: base.hpp  health_care_job.hpp  sleep_in_parts.hpp
include/superior_mysqlpp/types/: array.hpp  blob_data.hpp  datetime.hpp  dynamic.hpp  huge_string_data.hpp  nullable.hpp  string_data.hpp  tags.hpp
src/: CMakeLists.txt  SuperiorMySqlppConfig.cmake.in  dependecies.cmake
tests/: CMakeLists.txt  main.cpp  makefile  runtest.sh  test_utils.hpp  traits.cpp  uncaught_exception_counter.cpp
tests-extended/: dnsa_connection_pool.cpp  main.cpp  makefile
tests/converters/: converters.cpp
tests/db/: Dockerfile  docker-entrypoint.sh.patch  mysql-socket-tunnel-3307  supervisord.conf
tests/db_access/: connection.cpp  connection_pool.cpp  driver.cpp  dynamic_prepared_statements.cpp  master_slave_connection_pools.cpp  metadata.cpp  prepared_statements.cpp  query_escaping.cpp  row.cpp  row_stream.cpp  row_stream_adapter.cpp  settings.hpp  simple_result.cpp  store_result.cpp  test_utils.hpp  transactions.cpp
tests/extended/: CMakeLists.txt
tests/odr/: CMakeLists.txt  odr.tmpl
tests/types/: array.cpp  concat_iterator.cpp  date.cpp  datetime.cpp  decimal_data.cpp  loggers.cpp  nullable.cpp  string_data.cpp  time.cpp
